--- a/portfolio.html
+++ b/portfolio.html
@@ -16,49 +16,51 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheets"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./portfolio.styles.css" />
     
   </head>
   <body>
     <!--Секция хедер Портфолио-->
-    <header>
-      <nav>
+    <header class="page-header">
+      <div class="container">
+      <div class="general-nav">
+      <nav class="main-nav">
         <a href="./index.html" class="logo"
           >Web<span class="logo-accent">Studio</span></a
         >
 
         <ul class="site-nav">
-          <li>
+          <li class="item">
             <a href="./index.html" class="link">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./index.html" class="link current">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./index.html" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
 
       <ul class="link-contacts">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
+    </div>
+  </div>
     </header>
 
     <main>
       <!--Кнопки-->
       <section class="portfolio">
+        <div class="container">
         <ul class="filter">
           <li>
             <button class="button" type="button">Все</button>
@@ -75,8 +77,10 @@
             <button class="button" type="button">Маркетинг</button>
           </li>
         </ul>
+      </div>
 
         <!--Секция портфолио-->
+        <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
 
         <ul class="portfolio-list">
@@ -87,8 +91,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Технокряк</h2>
             <p class="item">Веб-сайт</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -97,8 +103,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Постер New Orlean vs Golden Star</h2>
             <p class="item">Дизайн</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -107,8 +115,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Ресторан Seafood</h2>
             <p class="item">Приложение</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -117,8 +127,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Проект Prime</h2>
             <p class="item">Маркетинг</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -127,8 +139,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Проект Boxes</h2>
             <p class="item">Приложение</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -137,8 +151,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Inspiration has no Borders</h2>
             <p class="item">Веб-сайт</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -147,8 +163,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Издание Limited Edition</h2>
             <p class="item">Дизайн</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -157,8 +175,10 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Проект LAB</h2>
             <p class="item">Маркетинг</p>
+          </div>
           </li>
           <li class="portfolio-picture">
             <img
@@ -167,14 +187,19 @@
               width="370"
               height="294"
             />
+            <div class="portfolio-picture-description">
             <h2 class="title">Growing Business</h2>
             <p class="item">Приложение</p>
+          </div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- Секция Footer Портфолио-->
     <footer class="footer">
+      <div class="container">
+
       <a href="./index.html" class="logo"
         >Web<span class="footer-logo-accent">Studio</span></a
       >
@@ -198,6 +223,7 @@
 
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
+    </div>
     </footer>
   </body>
 </html>
